--- a/6_if/05.07 Exercícios if.ipynb
+++ b/6_if/05.07 Exercícios if.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,14 +54,10 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'quatidade' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m quantidade \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQuantidade: \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m categoria \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mquatidade\u001b[49m \u001b[38;5;241m<\u001b[39m estoque_min_bebidas:\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrecisa comprar mais \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(nome))\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m categoria \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'quatidade' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precisa comprar mais nana\n"
      ]
     }
    ],
@@ -78,15 +74,15 @@
     "quantidade = int(input('Quantidade: '))\n",
     "\n",
     "if categoria == 'b':\n",
-    "    if quatidade < estoque_min_bebidas:\n",
+    "    if quantidade < estoque_min_bebidas:\n",
     "        print('Precisa comprar mais {}'.format(nome))\n",
     "        \n",
     "elif categoria == 'a':\n",
-    "    if quatidade < estoque_min_bebidas:\n",
+    "    if quantidade < estoque_min_bebidas:\n",
     "        print('Precisa comprar mais {}'.format(nome))\n",
     "        \n",
     "elif categoria == 'l':\n",
-    "    if quatidade < estoque_min_bebidas:\n",
+    "    if quantidade < estoque_min_bebidas:\n",
     "        print('Precisa comprar mais {}'.format(nome))"
    ]
   }
