--- a/14_functions/13.07.01 Exercícios de Function.ipynb
+++ b/14_functions/13.07.01 Exercícios de Function.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,20 +58,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sua function aqui"
+    "#sua function aqui\n",
+    "def calculo_stockout(vendas_dict):\n",
+    "    qtd_vendas_perdida_stoque = 0\n",
+    "    qtd_vendas_concluidas  = 0\n",
+    "\n",
+    "    for nome, tupla_venda in vendas_dict.items():\n",
+    "        valor, status, motivo = tupla_venda\n",
+    "        \n",
+    "        if status == 'Cancelado' and motivo == 'Estoque em Falta':\n",
+    "            qtd_vendas_perdida_stoque += valor\n",
+    "        \n",
+    "        if status == 'Concluido':\n",
+    "            qtd_vendas_concluidas += valor\n",
+    "    \n",
+    "    return qtd_vendas_perdida_stoque / qtd_vendas_perdida_stoque + qtd_vendas_concluidas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#rode sua function aqui com o dicionário dado para ver se ela está funcionando"
+    "#rode sua function aqui com o dicionário dado para ver se ela está funcionando\n",
+    "calculo_stockout(vendas)"
    ]
   },
   {
@@ -90,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,26 +125,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sua function aqui"
+    "#sua function aqui\n",
+    "def clientes_inadimplentes(lista_clientes):\n",
+    "    for tupla_clientes in lista_clientes:\n",
+    "        cpf, divida, qtd_dias = tupla_clientes\n",
+    "\n",
+    "        if divida >= 2_000 and qtd_dias >= 20:\n",
+    "            print('Cliente com cpf:{} está em inadiplemcia, sua divida é de {} a mais de {} dias'.format(cpf, divida, qtd_dias))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cliente com cpf:462.286.561-65 está em inadiplemcia, sua divida é de 14405 a mais de 24 dias\n",
+      "Cliente com cpf:297.681.579-21 está em inadiplemcia, sua divida é de 8177 a mais de 28 dias\n",
+      "Cliente com cpf:810.442.219-10 está em inadiplemcia, sua divida é de 18826 a mais de 29 dias\n",
+      "Cliente com cpf:908.507.760-43 está em inadiplemcia, sua divida é de 12445 a mais de 24 dias\n",
+      "Cliente com cpf:204.169.467-27 está em inadiplemcia, sua divida é de 5364 a mais de 22 dias\n",
+      "Cliente com cpf:358.890.858-95 está em inadiplemcia, sua divida é de 13932 a mais de 20 dias\n",
+      "Cliente com cpf:786.547.940-70 está em inadiplemcia, sua divida é de 17048 a mais de 25 dias\n",
+      "Cliente com cpf:540.685.100-32 está em inadiplemcia, sua divida é de 5806 a mais de 21 dias\n",
+      "Cliente com cpf:379.729.796-80 está em inadiplemcia, sua divida é de 7622 a mais de 24 dias\n",
+      "Cliente com cpf:980.173.363-94 está em inadiplemcia, sua divida é de 13167 a mais de 24 dias\n",
+      "Cliente com cpf:833.285.374-56 está em inadiplemcia, sua divida é de 19581 a mais de 24 dias\n",
+      "Cliente com cpf:670.346.230-99 está em inadiplemcia, sua divida é de 18079 a mais de 28 dias\n",
+      "Cliente com cpf:771.352.915-13 está em inadiplemcia, sua divida é de 16581 a mais de 23 dias\n",
+      "Cliente com cpf:430.314.324-46 está em inadiplemcia, sua divida é de 13942 a mais de 24 dias\n",
+      "Cliente com cpf:406.133.151-17 está em inadiplemcia, sua divida é de 5888 a mais de 30 dias\n",
+      "Cliente com cpf:310.985.894-64 está em inadiplemcia, sua divida é de 17316 a mais de 30 dias\n",
+      "Cliente com cpf:964.317.132-30 está em inadiplemcia, sua divida é de 18818 a mais de 30 dias\n",
+      "Cliente com cpf:781.995.738-18 está em inadiplemcia, sua divida é de 19369 a mais de 29 dias\n",
+      "Cliente com cpf:921.558.128-63 está em inadiplemcia, sua divida é de 3206 a mais de 27 dias\n",
+      "Cliente com cpf:941.386.982-65 está em inadiplemcia, sua divida é de 10228 a mais de 26 dias\n",
+      "Cliente com cpf:279.775.182-54 está em inadiplemcia, sua divida é de 5212 a mais de 20 dias\n",
+      "Cliente com cpf:684.995.531-65 está em inadiplemcia, sua divida é de 8649 a mais de 21 dias\n",
+      "Cliente com cpf:285.864.892-85 está em inadiplemcia, sua divida é de 8200 a mais de 21 dias\n",
+      "Cliente com cpf:143.188.958-61 está em inadiplemcia, sua divida é de 7234 a mais de 29 dias\n",
+      "Cliente com cpf:165.554.107-13 está em inadiplemcia, sua divida é de 9572 a mais de 23 dias\n",
+      "Cliente com cpf:718.225.984-87 está em inadiplemcia, sua divida é de 10534 a mais de 25 dias\n",
+      "Cliente com cpf:397.994.286-79 está em inadiplemcia, sua divida é de 13651 a mais de 24 dias\n",
+      "Cliente com cpf:967.160.575-69 está em inadiplemcia, sua divida é de 8997 a mais de 25 dias\n",
+      "Cliente com cpf:171.104.286-74 está em inadiplemcia, sua divida é de 5821 a mais de 21 dias\n",
+      "Cliente com cpf:152.817.649-24 está em inadiplemcia, sua divida é de 3358 a mais de 30 dias\n",
+      "Cliente com cpf:645.308.846-62 está em inadiplemcia, sua divida é de 15176 a mais de 25 dias\n",
+      "Cliente com cpf:201.476.809-95 está em inadiplemcia, sua divida é de 17442 a mais de 21 dias\n",
+      "Cliente com cpf:486.290.887-24 está em inadiplemcia, sua divida é de 18576 a mais de 26 dias\n",
+      "Cliente com cpf:432.376.642-62 está em inadiplemcia, sua divida é de 8027 a mais de 23 dias\n",
+      "Cliente com cpf:207.274.437-91 está em inadiplemcia, sua divida é de 5125 a mais de 29 dias\n",
+      "Cliente com cpf:346.871.172-72 está em inadiplemcia, sua divida é de 8105 a mais de 23 dias\n",
+      "Cliente com cpf:817.170.984-26 está em inadiplemcia, sua divida é de 5169 a mais de 27 dias\n",
+      "Cliente com cpf:591.397.550-29 está em inadiplemcia, sua divida é de 13362 a mais de 25 dias\n",
+      "Cliente com cpf:615.629.238-82 está em inadiplemcia, sua divida é de 11678 a mais de 23 dias\n",
+      "Cliente com cpf:240.427.458-70 está em inadiplemcia, sua divida é de 3906 a mais de 25 dias\n",
+      "Cliente com cpf:700.720.266-23 está em inadiplemcia, sua divida é de 12638 a mais de 21 dias\n",
+      "Cliente com cpf:261.974.594-90 está em inadiplemcia, sua divida é de 2139 a mais de 26 dias\n",
+      "Cliente com cpf:680.569.318-52 está em inadiplemcia, sua divida é de 10176 a mais de 23 dias\n",
+      "Cliente com cpf:200.761.898-70 está em inadiplemcia, sua divida é de 16244 a mais de 20 dias\n",
+      "Cliente com cpf:556.156.341-36 está em inadiplemcia, sua divida é de 16269 a mais de 23 dias\n",
+      "Cliente com cpf:852.796.660-25 está em inadiplemcia, sua divida é de 2662 a mais de 23 dias\n",
+      "Cliente com cpf:536.714.951-95 está em inadiplemcia, sua divida é de 2877 a mais de 23 dias\n",
+      "Cliente com cpf:520.645.562-80 está em inadiplemcia, sua divida é de 17547 a mais de 24 dias\n",
+      "Cliente com cpf:913.525.896-32 está em inadiplemcia, sua divida é de 17651 a mais de 28 dias\n",
+      "Cliente com cpf:760.248.897-67 está em inadiplemcia, sua divida é de 4953 a mais de 25 dias\n",
+      "Cliente com cpf:920.890.990-46 está em inadiplemcia, sua divida é de 17172 a mais de 20 dias\n",
+      "Cliente com cpf:805.469.913-50 está em inadiplemcia, sua divida é de 17500 a mais de 21 dias\n",
+      "Cliente com cpf:847.150.802-96 está em inadiplemcia, sua divida é de 8602 a mais de 22 dias\n",
+      "Cliente com cpf:539.300.108-41 está em inadiplemcia, sua divida é de 11225 a mais de 21 dias\n",
+      "Cliente com cpf:738.451.908-29 está em inadiplemcia, sua divida é de 18905 a mais de 22 dias\n",
+      "Cliente com cpf:987.288.834-69 está em inadiplemcia, sua divida é de 17533 a mais de 25 dias\n",
+      "Cliente com cpf:757.885.355-97 está em inadiplemcia, sua divida é de 18150 a mais de 28 dias\n",
+      "Cliente com cpf:523.895.611-54 está em inadiplemcia, sua divida é de 9878 a mais de 26 dias\n",
+      "Cliente com cpf:535.354.954-30 está em inadiplemcia, sua divida é de 9195 a mais de 22 dias\n",
+      "Cliente com cpf:209.759.133-88 está em inadiplemcia, sua divida é de 13580 a mais de 21 dias\n",
+      "Cliente com cpf:321.123.241-10 está em inadiplemcia, sua divida é de 2592 a mais de 22 dias\n",
+      "Cliente com cpf:407.342.963-78 está em inadiplemcia, sua divida é de 11435 a mais de 21 dias\n",
+      "Cliente com cpf:815.943.237-83 está em inadiplemcia, sua divida é de 19550 a mais de 22 dias\n",
+      "Cliente com cpf:379.995.400-37 está em inadiplemcia, sua divida é de 9503 a mais de 29 dias\n",
+      "Cliente com cpf:495.461.913-57 está em inadiplemcia, sua divida é de 12265 a mais de 29 dias\n",
+      "Cliente com cpf:408.987.269-72 está em inadiplemcia, sua divida é de 5647 a mais de 28 dias\n",
+      "Cliente com cpf:761.137.848-34 está em inadiplemcia, sua divida é de 10654 a mais de 23 dias\n",
+      "Cliente com cpf:956.318.620-43 está em inadiplemcia, sua divida é de 6327 a mais de 22 dias\n",
+      "Cliente com cpf:986.516.478-33 está em inadiplemcia, sua divida é de 3866 a mais de 25 dias\n",
+      "Cliente com cpf:327.988.845-70 está em inadiplemcia, sua divida é de 14985 a mais de 23 dias\n",
+      "Cliente com cpf:887.826.412-21 está em inadiplemcia, sua divida é de 15977 a mais de 24 dias\n",
+      "Cliente com cpf:122.975.174-32 está em inadiplemcia, sua divida é de 9409 a mais de 25 dias\n",
+      "Cliente com cpf:208.788.890-61 está em inadiplemcia, sua divida é de 11893 a mais de 22 dias\n"
+     ]
+    }
+   ],
    "source": [
-    "#rode sua function aqui com a lista dada para ver se está funcionando"
+    "#rode sua function aqui com a lista dada para ver se está funcionando\n",
+    "clientes_inadimplentes(clientes_devedores)"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
